Fix SVG not filling button on iPhone

--- a/style.css
+++ b/style.css
@@ -62,21 +62,30 @@ div#container {
 
 #toggle-container {
     width: 100%;
-    height: 7%;
+    height: auto;
 }
 
 #toggle {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 20%;
-    height: 100%;
+    width: 1.75rem;
+    height: auto;
     min-width: 31.75px;
     max-width: 34px;
     min-height: 24.5px;
-    padding: 0;
-    filter: invert(1);
+    padding: 4px;
+    border-width: 1px;
+    border-radius: 8px;
     float: none;
+    background: transparent;
+}
+
+#toggle img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    filter: invert(1);
 }
 
 ul {
